apps/production/liftlog/postgres/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: liftlog-postgres
  namespace: liftlog
spec:
  selector:
    app: liftlog-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
